--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,10 @@
   max-width: 1600px;
   min-width: 1100px;
   margin: 0 auto;
-  font-family: "inter",Arial,sans-serif;
-  font-size: 16px;
+  font-family: "Inter","Arial",sans-serif;
+  font-weight: 400,500,700;
+  font-family: "Noto Serif",Times New Roman,serif;
+  font-weight: 400;
+ font-size: 16px;
   line-height: 20px;
 }
