--- a/pages/index.css
+++ b/pages/index.css
@@ -2,9 +2,7 @@
   max-width: 1600px;
   min-width: 1100px;
   margin: 0 auto;
-  font-family: "Inter","Arial",sans-serif;
-  font-family: "Noto Serif",Times New Roman,serif;
-  font-weight: 400;
- font-size: 16px;
+  font-family: "Inter",Arial,sans-serif;
+  font-size: 16px;
   line-height: 20px;
 }
