--- a/pages/index.css
+++ b/pages/index.css
@@ -260,7 +260,7 @@ input[type="datetime-local"]{
 
 
 
-.footer__label{
+.reservation__footer{
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -295,7 +295,7 @@ input[type="datetime-local"]{
 }
 
 
-.footer__label_terminos{
+.reservation__footer_label{
   display: flex;
   flex-direction: row;
   justify-content: center;
