--- a/pages/index.css
+++ b/pages/index.css
@@ -1,314 +1,35 @@
-.page {
-  max-width: 1600px;
-  min-width: 1100px;
-  margin: 0 auto;
-  font-family: "Inter",Arial,sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-
-}
-.header{
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  background-image: url(../images/background_header.svg);
-  background-color: #FFFFFF;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-.nav {
-display:flex;
-justify-content: space-between;
-
-}
-
-.nav__logo{
-position: relative;
-  width: 105px;
-  height: 39px;
-  top: 30px;
-  left: 30px;
-}
 
 
-.nav__links {
-  position: relative;
-  display: flex;
-  column-gap: 20px;
-  list-style: none;
-  top: 30px;
-  right: 80px;
-  font-family:"inter",Arial,sans-serif;
-    font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-
-}
-.header__image{
-
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  max-width: 636px;
-  width: 646px;
-  height: 568px;
-
-}
-.header__title {
-  position: relative;
-  margin: 0;
-  max-width: 729px;
-  padding-top: 183px;
-  left: 80px;
-  font-family:"inter",Arial,sans-serif;
-    font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-
-}
-.header__span-accent{
-  font-family: "Noto Serif","Times New Roman",serif;
-  font-style: italic;
-    font-size: 60px;
-  line-height: 72px;
-  color:#2f80ed;
-}
-
-.header__description {
-  max-width: 683px;
-position: relative;
-  margin: 0;
-  font-size: 20px;
-  line-height: 30px;
-  padding-top: 20px;
-  left: 80px;
-  font-family: "Noto Serif","Times New Roman",serif;
-     font-size: 20px;
-  line-height: 30px;
-
-}
-
-.header__footer {
-  margin-top: auto;
-  display: flex;
-  justify-content:space-between;
-  font-family:"inter",Arial,sans-serif;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-}
-.header__footer_paragraph-hora{
-  position: absolute;
-  left:80px;
-  bottom: 40px;
-}
-.header__footer_paragraph-direc{
-  position: absolute;
-  right:80px;
-  bottom: 40px;
-}
-.recipes{
-  display: block;
-  position: relative;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  background-image: url(../images/background_recipes.svg);
-  background-color: #0a2750;
-  background-repeat: no-repeat;
-  background-position:center;
-  background-size: cover;
-   color: #FFFFFF;
-   padding-bottom: 215px;
-
-}
-.recipes__title{
-  max-width: 580px;
- padding-top: 100px;
-  padding-left:80px;
-  font-family: "inter",Arial,sans-serif;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-.recipes__subtitle{
-  top: 24px;
-  max-width: 438px;
-  font-family: "Noto Serif","Times New Roman",serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-.recipes__videos{
- display: flex;
- gap: 40px;
- justify-content: center;
+/*normalize*/
+@import url("../vendor/normalize.css");
 
 
-}
-
-.recipes__iframe{
-  border: none;
-
-}
-.recipes__videos_video-item{
-  display: block;
-  padding-top: 80px;
-}
-.recipes__videos_video-caption{
-  justify-content: space-between;
-  padding-top: 24px;
-  bottom: 215px;
-  font-family: "inter";
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-
-}
-/*etapa 3 proyecto 3*/
-.reservation{
-
-  max-width: 1600px;
-  min-width: 1100px;
-  background-image: url(../images/background_reservation.svg);
-  background-color:  #d9e7ff ;
-  background-repeat: no-repeat;
-  background-position:center;
-  background-size: cover;
-   color: #000000;
-
-
-}
-
-
-.reservation__title{
-  display: flex;
-  justify-content:center;
-  padding-top: 100px;
-
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
+/*page*/
+@import url("../blocks/body.css");
 
 
 
-}
-
-.reservation__form{
-display: block;
+/*header */
+@import url("../blocks/header.css");
 
 
+/*recipes*/
+@import url("../blocks/recipes.css");
 
 
-}
-.reservation__label{
-  padding-top: 32px;
-  padding-bottom: 8px;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 500;
-   font-size: 16px;
-   line-height: 20px;
-}
+/*reservation*/
+@import url("../blocks/reservation.css");
 
 
-
-.reservation__form_container{
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 32px;
-  margin: auto;
-  max-width: 385px;
-  width: 385px;
-  box-sizing: border-box;
-  border: none;
+/*menu*/
+@import url("../blocks/menu.css");
 
 
-
-}
-.reservation__input{
-margin-top: 8px;
-height: 60px;
-max-width: 385px;
+/*abput*/
+@import url("../blocks/about.css");
 
 
-}
-input::placeholder{
-  padding-left: 20px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-   line-height: 30px;
-   color: #838383;
-}
-input[type="datetime-local"]{
-  padding-left: 20px;
-  padding-top: 15px;
-
-}
-
-
-
-.reservation__footer{
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  padding-bottom: 120px;
-  max-width: 385px;
-
-  box-sizing: border-box;
-  border: none;
-
-}
-
-
-
-.reservation__button{
-  justify-content: flex-start;
-  background-color: #2f80ed ;
-  color: #FFFFFF;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  height: 60px;
-  border-radius: 4px;
-  border: none;
-  max-width: 385px;
-
-}
-
-.reservation__button:hover{
-  opacity: 0.7;
-}
-
-
-.reservation__footer_label{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-margin-top: 32px;
-align-content: center;
-
-
-}
-
-input[type="checkbox"]{
-  margin-right: 12px;
-}
-
-
+/*footer*/
+@import url("../blocks/footer.css");
 
 
