--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -65,7 +65,7 @@ margin-bottom: 30px;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  justify-content: space-between;
+  /*justify-content: space-between; (investigando otra manera de separar los precios)*/
   font-size: 16px;
 }
 
@@ -77,8 +77,9 @@ margin-bottom: 30px;
 }
 
 .menu__separation {
-
-  width: 100%;
+flex-grow: 1;
+ /*white-space: nowrap;
+ width: 100%;(investigando llegue a ese resultado para separar los precios)*/
   height: 10px;
   border-bottom: solid  ;
   border-width: 1px;
