--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -17,7 +17,7 @@
   display: flex;
   justify-content:center;
   padding-top: 100px;
-
+  margin: 0;
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
