--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,6 +1,6 @@
 .about {
-  padding: 100px 80px;
-  background-color: #1f1f1f;
+
+  background-color: #050a43;
   color: #fff;
   overflow: hidden;
   position: relative;
@@ -10,25 +10,56 @@
 }
 
 .about__title{
+  padding-top: 120px;
+  padding-left: 30px;
+  padding-bottom: 200px;
   z-index: 1;
+  margin: 0;
+  max-width: 200px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+
 }
 
 
 .about__circle {
   background-color: #2f80ed;
-  width: 495px;
-  height: 495px;
+  width: 450px;
+  height: 450px;
   border-radius: 50%;
   position: absolute;
-  left: -91px;
-  top: -121px;
+  left: -205px;
+  top: -140px;
   z-index: 0;
 }
 
 .about__content{
+  display: block;
+
+  padding-top: 120px;
+  padding-bottom: 100px;
+  padding-left:500px;
+  padding-right: 30px;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 200;
+  max-width: 660px;
+  z-index: 1;
+
+
 
 }
 
 .about__content_text{
-  
+
+  display: block;
+  margin: auto;
+  padding-top: 30px;
+  font-family: "Noto Serif","Times New Roman",serif;
+  font-size: 20px;
+  line-height: 30px;
+
 }
