--- a/blocks/header.css
+++ b/blocks/header.css
@@ -42,6 +42,13 @@
     line-height: 20px;
 
   }
+  .nav__link{
+    text-decoration: none;
+    color: black;
+  }
+  .nav__link:hover{
+    color: blue;
+  }
   .header__image{
 
     position: absolute;
