--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -113,6 +113,7 @@ input[type="datetime-local"]{
   border-radius: 4px;
   border: none;
   max-width: 385px;
+  cursor: pointer;
 
 }
 
@@ -130,7 +131,22 @@ align-content: center;
 
 
 }
-
-input[type="checkbox"]{
+ .reservation__checkbox{
   margin-right: 12px;
+  width: 20px;
+  height: 20px;
+
+}
+
+
+
+input[type="checkbox"]:checked{
+
+  appearance:none;
+  border-radius: 5px;
+  background-image: url(../images/check.svg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+
 }
