--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -27,6 +27,7 @@
 
 .menu__description{
   text-align: center;
+  padding-bottom: 55px;
   font-family: "Noto Serif","Times New Roman",serif;
   font-size: 20px;
   line-height: 30px;
@@ -40,7 +41,7 @@
   flex-wrap:wrap ;
   justify-content:space-evenly ;
   gap: 10px;
-  list-style-type: none;
+
   font-family: "Noto Serif","Times New Roman",serif;
 
 padding-bottom: 70px;
@@ -48,14 +49,15 @@ padding-bottom: 70px;
 }
 
 .card__title{
-
+  padding-bottom: 25px;
   font-family: "Noto Serif","Times New Roman",serif;
   font-size: 20px;
   line-height: 30px;
   font-weight:bold;
 }
 .menu__cards_content{
-
+  padding-top: 30px;
+  list-style-type: none;
 max-width: 800px;
 padding-left: 0;
 margin-bottom: 30px;
