--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -47,15 +47,8 @@
 padding-bottom: 70px;
 
 }
-
-.card__title{
-  padding-bottom: 25px;
-  font-family: "Noto Serif","Times New Roman",serif;
-  font-size: 20px;
-  line-height: 30px;
-  font-weight:bold;
-}
 .menu__cards_content{
+display: block;
   padding-top: 30px;
   list-style-type: none;
 max-width: 800px;
@@ -64,8 +57,18 @@ margin-bottom: 30px;
 
 }
 
+.menu__card-title{
 
-.menu__item_card{
+  padding-bottom: 25px;
+  font-family: "Noto Serif","Times New Roman",serif;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight:bold;
+}
+
+
+
+.menu__item-card{
   display: flex;
   line-height: 5px;
   width: 600px;
@@ -78,7 +81,7 @@ margin-bottom: 30px;
 }
 
 
-.menu__item_name{
+.menu__item-name{
 
   white-space: nowrap;
   box-sizing: border-box;
