--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,18 +1,6 @@
 
-.menu__cards{
-  display: flex;
-  margin:auto;
 
-  flex-wrap:wrap ;
-  justify-content:space-evenly ;
-  gap: 10px;
-
-  font-family: "Noto Serif","Times New Roman",serif;
-
-padding-bottom: 70px;
-
-}
-.menu__cards_content{
+.cards__content{
 display: block;
   padding-top: 30px;
   list-style-type: none;
@@ -22,7 +10,7 @@ margin-bottom: 30px;
 
 }
 
-.menu__card-title{
+.card__title{
 
   padding-bottom: 25px;
   font-family: "Noto Serif","Times New Roman",serif;
@@ -33,7 +21,7 @@ margin-bottom: 30px;
 
 
 
-.menu__item-card{
+.card__item{
   display: flex;
   line-height: 5px;
   width: 600px;
@@ -46,13 +34,13 @@ margin-bottom: 30px;
 }
 
 
-.menu__item-name{
+.card__item-name{
 
   white-space: nowrap;
   box-sizing: border-box;
 }
 
-.menu__separation {
+.card__separation {
 flex-grow: 1;
  /*white-space: nowrap;
  width: 100%;(investigando llegue a ese resultado para separar los precios)*/
