--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,24 +1,36 @@
 
 
-.card__content{
-display: block;
-  padding-top: 30px;
+.card{
+  max-width: 540px;
   list-style-type: none;
+  padding:0 100px 100px;
+
+}
+.card__title{
+  margin: 0;
+  padding-bottom: 32px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: bold;
+   font-size: 20px;
+    line-height: 30px;
+
+}
+
+.card__content{
+
 max-width: 800px;
 padding-left: 0;
 margin-bottom: 30px;
 
+font-family:
+"Noto Serif";
+font-style: normal;
+ font-weight: normal;
+  font-size: 16px;
+   line-height: 20px;
+
 }
-
-.card__title{
-
-  padding-bottom: 25px;
-  font-family: "Noto Serif","Times New Roman",serif;
-  font-size: 20px;
-  line-height: 30px;
-  font-weight:bold;
-}
-
 
 
 .card__item{
@@ -28,7 +40,7 @@ margin-bottom: 30px;
   align-items: center;
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  padding-bottom: 16px;
   /*justify-content: space-between; (investigando otra manera de separar los precios)*/
   font-size: 16px;
 }
