--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -14,37 +14,43 @@
 }
 
 .menu__title{
+  display: flex;
+  justify-content:center;
+  padding-top: 100px;
+  margin: 0;
 
-  text-align: center;
-  padding-top: 80px;
+  font-family: "Inter";
 
-  font-family: Inter;
-  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
 }
 
 .menu__subtitle{
-  text-align: center;
-  padding-bottom: 55px;
-  font-family: "Noto Serif","Times New Roman",serif;
-  font-size: 20px;
-  line-height: 30px;
+
+  display: flex;
+  justify-content:center;
+  margin: 0;
+  padding-top: 24px;
+  padding-bottom: 100px;
+  font-family: "Noto Serif";
+
+   font-size: 20px;
+   line-height: 30px;
   }
 
 
-  .menu__card{
+  .menu__cards{
     display: flex;
     margin:auto;
 
     flex-wrap:wrap ;
     justify-content:space-evenly ;
-    gap: 10px;
 
-    font-family: "Noto Serif","Times New Roman",serif;
 
-  padding-bottom: 70px;
+
+
+  
 
   }
 
